# cperccli

./: COPYING  MANIFEST.in  README.md  pyproject.toml  setup.py
src/: __init__.py  cperccli.py
src/cperccli/libs/: __init__.py  builder.py  compat.py  managers.py  painters.py  queries.py  robots.py  utils.py
src/libs/: compat.py  managers.py  painters.py  robots.py  utils.py
